Refactor documentation for DazzleDuck SQL and Arrow JS UI
- Updated setup guide for Arrow JS UI, clarifying prerequisites and local development steps.
- Revised usage section for Arrow JS UI, enhancing clarity on login, query execution, and result viewing.
- Improved connection pool documentation, emphasizing features and usage examples.
- Enhanced query fingerprinting documentation, detailing its purpose and implementation notes.
- Expanded ingestion utilities documentation, outlining key components and production considerations.
- Updated overview of DazzleDuck SQL Commons, highlighting its role in the ecosystem and key capabilities.
- Refined partition pruning documentation, focusing on its benefits and operational details.
- Clarified SQL transformation documentation, emphasizing its applications and production considerations.
- Revised DazzleDuck SQL Flight Server documentation, detailing installation, setup, and key capabilities.
- Improved authentication and authorization documentation for Flight SQL, emphasizing JWT usage and claims.
- Updated ingestion documentation for Flight SQL, clarifying supported formats and features.
- Enhanced JDBC documentation, detailing connection methods and performance tips.
- Revised HTTP server installation documentation, streamlining setup instructions and output expectations.